--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -940,159 +940,167 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>379 181 445 270 0 0 1280 778 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>430 260 924 485 0 0 1280 778 </string>
+	<string>58 275 924 485 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>165 75 625 703 0 0 1280 778 </string>
+	<string>519 69 625 706 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>152 64 625 714 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>173 63 625 715 0 0 1280 778 </string>
+	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
+	<true/>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
 			<key>ASCII Anti Aliased</key>
 			<true/>
+			<key>Allow Title Reporting</key>
+			<false/>
 			<key>Ambiguous Double Width</key>
 			<false/>
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.11764705926179886</real>
+				<real>0.48771023750305176</real>
 				<key>Green Component</key>
-				<real>0.11372549086809158</real>
+				<real>0.48781105875968933</real>
 				<key>Red Component</key>
-				<real>0.10588235408067703</real>
+				<real>0.48775118589401245</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.29618328809738159</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.027414536103606224</real>
 				<key>Red Component</key>
-				<real>0.97647058963775635</real>
+				<real>0.95434224605560303</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18039216101169586</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.83000284433364868</real>
 				<key>Red Component</key>
-				<real>0.65098041296005249</real>
+				<real>0.53356200456619263</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45490196347236633</real>
+				<real>0.30797004699707031</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.84070998430252075</real>
 				<key>Red Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.88004410266876221</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78039216995239258</real>
+				<real>0.91900157928466797</real>
 				<key>Green Component</key>
-				<real>0.46274510025978088</real>
+				<real>0.74850761890411377</real>
 				<key>Red Component</key>
-				<real>0.12941177189350128</real>
+				<real>0.3060213029384613</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.5058823823928833</real>
+				<real>0.41711190342903137</real>
 				<key>Red Component</key>
-				<real>0.68235296010971069</real>
+				<real>0.94003516435623169</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93725490570068359</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.38724252581596375</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.57401758432388306</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.93353170156478882</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.93353170156478882</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.93353170156478882</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18039216101169586</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.83000284433364868</real>
 				<key>Red Component</key>
-				<real>0.65098041296005249</real>
+				<real>0.53356200456619263</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45490196347236633</real>
+				<real>0.30797004699707031</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.84070998430252075</real>
 				<key>Red Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.88004410266876221</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78231418132781982</real>
+				<real>0.91900157928466797</real>
 				<key>Green Component</key>
-				<real>0.46265947818756104</real>
+				<real>0.74850761890411377</real>
 				<key>Red Component</key>
-				<real>0.12754884362220764</real>
+				<real>0.3060213029384613</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.5058823823928833</real>
+				<real>0.41711190342903137</real>
 				<key>Red Component</key>
-				<real>0.68235296010971069</real>
+				<real>0.94003516435623169</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93725490570068359</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.38724252581596375</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.57401758432388306</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.93353170156478882</real>
 				<key>Green Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.93353170156478882</real>
 				<key>Red Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.93353170156478882</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.11764705926179886</real>
+				<real>0.48771023750305176</real>
 				<key>Green Component</key>
-				<real>0.11372549086809158</real>
+				<real>0.48781105875968933</real>
 				<key>Red Component</key>
-				<real>0.10588235408067703</real>
+				<real>0.48775118589401245</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.29618328809738159</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.027414536103606224</real>
 				<key>Red Component</key>
-				<real>0.97647058963775635</real>
+				<real>0.95434224605560303</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -1101,12 +1109,14 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.098682582378387451</real>
 				<key>Green Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.11838251352310181</real>
 				<key>Red Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.11495672911405563</real>
 			</dict>
+			<key>Background Image Is Tiled</key>
+			<false/>
 			<key>Background Image Location</key>
 			<string></string>
 			<key>Blend</key>
@@ -1122,11 +1132,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93319034576416016</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.96691048145294189</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.96580147743225098</real>
+				<real>1</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -1139,25 +1149,25 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94117647409439087</real>
+				<real>0.37647059559822083</real>
 				<key>Green Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.64705884456634521</real>
 				<key>Red Component</key>
-				<real>0.97254902124404907</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13333334028720856</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.13333334028720856</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.13333334028720856</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
 			<key>Custom Command</key>
-			<string>Yes</string>
+			<string>No</string>
 			<key>Custom Directory</key>
 			<string>No</string>
 			<key>Default Bookmark</key>
@@ -1173,11 +1183,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.93353170156478882</real>
 				<key>Green Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.93353170156478882</real>
 				<key>Red Component</key>
-				<real>0.97254902124404907</real>
+				<real>0.93353170156478882</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -1519,20 +1529,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93319034576416016</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.96691048145294189</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.96580147743225098</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.26666668057441711</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.26666668057441711</real>
+				<real>0.8353000283241272</real>
 				<key>Red Component</key>
-				<real>0.26666668057441711</real>
+				<real>0.70980000495910645</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -1659,6 +1669,10 @@
 			<key>Use Bold Font</key>
 			<false/>
 			<key>Use Bright Bold</key>
+			<false/>
+			<key>Use Canonical Parser</key>
+			<false/>
+			<key>Use Italic Font</key>
 			<false/>
 			<key>Vertical Spacing</key>
 			<real>1</real>
@@ -2456,11 +2470,11 @@
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>http://iterm2.googlecode.com/svn/trunk/appcasts/testing.xml</string>
+	<string>http://iterm2.com/appcasts/testing.xml</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-05-22T14:06:02Z</date>
+	<date>2013-07-17T04:07:55Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -2510,7 +2524,11 @@
 	<integer>2</integer>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findIgnoreCase_iTerm</key>
+	<true/>
+	<key>findRegex_iTerm</key>
+	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20130319</string>
+	<string>1.0.0.20130624</string>
 </dict>
 </plist>
