--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -928,7 +928,7 @@
 	<key>NSNavBrowserPreferedColumnContentWidth</key>
 	<real>186</real>
 	<key>NSNavLastCurrentDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/SettingFiles/back</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/Desktop</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -940,13 +940,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>379 181 445 270 0 0 1280 778 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>58 275 924 485 0 0 1280 778 </string>
+	<string>90 246 924 485 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>519 69 625 706 0 0 1280 778 </string>
+	<string>519 73 625 705 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>152 64 625 714 0 0 1280 778 </string>
+	<string>352 83 625 692 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>173 63 625 715 0 0 1280 778 </string>
+	<string>623 67 625 711 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -2474,7 +2474,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-07-17T04:07:55Z</date>
+	<date>2013-08-19T08:17:01Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -2511,7 +2511,7 @@
 	<key>UseBorder</key>
 	<false/>
 	<key>UseCompactLabel</key>
-	<true/>
+	<false/>
 	<key>UseLionStyleFullscreen</key>
 	<true/>
 	<key>WebKitDefaultFontSize</key>
