--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,12 @@
 	; http://qiita.com/sonots/items/fbbcfdba6d7d016fbadb
 	current-branch = rev-parse --abbrev-ref HEAD
 	pull-dry-run  = !"git fetch origin; B=$(git rev-parse --abbrev-ref HEAD); git diff --stat --summary ${B}..origin/${B}"
+; http://qiita.com/shim0mura/items/4363769faf25ce485b89
+	rma  = rm `git ls-files --deleted`
+; http://lynn1985.blog.shinobi.jp/%E5%8B%89%E5%BC%B7%E3%83%A1%E3%83%A2/git%20%E7%89%B9%E5%AE%9A%E3%81%AE%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E3%81%AE%E5%A4%89%E6%9B%B4%E5%B1%A5%E6%AD%B4%E3%82%92%E8%A6%8B%E3%82%8B
+	flog  = log -p
+	; http://qiita.com/yuyuchu3333/items/a30387bdd6a0afc1185c
+	rso  = remote show origin
 ; diff-highlight = "!f() { git diff \"$@\" | /usr/local/Cellar/git/contrib/diff-highlight/diff-highlight; }; f"
 
 ; http://motemen.hatenablog.com/entry/2013/11/26/Git_%E3%81%AE_diff_%E3%82%92%E7%BE%8E%E3%81%97%E3%81%8F%E8%A1%A8%E7%A4%BA%E3%81%99%E3%82%8B%E3%81%9F%E3%82%81%E3%81%AB%E5%BF%85%E8%A6%81%E3%81%AA%E3%81%9F%E3%81%A3%E3%81%9F_1_%E3%81%A4%E3%81%AE%E8%A8%AD
