--- a/.gitmodules
+++ b/.gitmodules
@@ -1,31 +1,31 @@
 [submodule ".emacs.d/elisp/helm"]
 	path = .emacs.d/elisp/helm
-	url = git@github.com:emacs-helm/helm.git
+	url = https://github.com/emacs-helm/helm.git
 [submodule ".emacs.d/elisp/tabbar"]
 	path = .emacs.d/elisp/tabbar
-	url = git@github.com:dholm/tabbar.git
+	url = https://github.com/dholm/tabbar.git
 [submodule ".vim/bundle/ctrlp.vim"]
 	path = .vim/bundle/ctrlp.vim
-	url = git@github.com:kien/ctrlp.vim.git
+	url = https://github.com/kien/ctrlp.vim.git
 [submodule ".vim/bundle/nerdcommenter"]
 	path = .vim/bundle/nerdcommenter
-	url = git@github.com:scrooloose/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
-	url = git@github.com:scrooloose/nerdtree
+	url = https://github.com/scrooloose/nerdtree
 [submodule ".vim/bundle/syntastic"]
 	path = .vim/bundle/syntastic
-	url = git@github.com:scrooloose/syntastic
+	url = https://github.com/scrooloose/syntastic
 [submodule ".vim/bundle/vim-easymotion"]
 	path = .vim/bundle/vim-easymotion
-	; url = git@github.com:Lokaltog/vim-easymotion
-	url = git@github.com:haya14busa/vim-easymotion
+	; url = https://github.com/Lokaltog/vim-easymotion
+	url = https://github.com/haya14busa/vim-easymotion
 [submodule ".vim/bundle/vim-scala"]
 	path = .vim/bundle/vim-scala
-	url = git@github.com:derekwyatt/vim-scala
+	url = https://github.com/derekwyatt/vim-scala
 [submodule ".vim/bundle/vundle"]
 	path = .vim/bundle/vundle
-	url = git@github.com:gmarik/vundle
+	url = https://github.com/gmarik/vundle
 [submodule ".emacs.d/elisp/multiple-cursors"]
 	path = .emacs.d/elisp/multiple-cursors
 	url = https://github.com/magnars/multiple-cursors.el.git
