--- a/.gitmodules
+++ b/.gitmodules
@@ -48,3 +48,6 @@
 [submodule ".vim/bundle/accelerated-smooth-scroll"]
 	path = .vim/bundle/accelerated-smooth-scroll
 	url = https://github.com/yonchu/accelerated-smooth-scroll
+[submodule ".vim/bundle/vim-smartinput"]
+	path = .vim/bundle/vim-smartinput
+	url = https://github.com/kana/vim-smartinput
