--- a/.gitmodules
+++ b/.gitmodules
@@ -16,38 +16,15 @@
 [submodule ".vim/bundle/syntastic"]
 	path = .vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic
-[submodule ".vim/bundle/vim-easymotion"]
-	path = .vim/bundle/vim-easymotion
-	; url = https://github.com/Lokaltog/vim-easymotion
-	url = https://github.com/haya14busa/vim-easymotion
-[submodule ".vim/bundle/vim-scala"]
-	path = .vim/bundle/vim-scala
-	url = https://github.com/derekwyatt/vim-scala
 [submodule ".vim/bundle/vundle"]
 	path = .vim/bundle/vundle
 	url = https://github.com/gmarik/vundle
 [submodule ".emacs.d/elisp/multiple-cursors"]
 	path = .emacs.d/elisp/multiple-cursors
 	url = https://github.com/magnars/multiple-cursors.el.git
-[submodule ".vim/bundle/open-browser.vim"]
-	path = .vim/bundle/open-browser.vim
-	url = https://github.com/tyru/open-browser.vim.git
-[submodule ".vim/bundle/vim-multiple-cursors"]
-	path = .vim/bundle/vim-multiple-cursors
-	; url = https://github.com/terryma/vim-multiple-cursors.git
-	url = https://github.com/terryma/vim-multiple-cursors
-[submodule ".vim/bundle/switch.vim"]
-	path = .vim/bundle/switch.vim
-	url = https://github.com/AndrewRadev/switch.vim.git
-[submodule ".vim/bundle/unite.vim"]
-	path = .vim/bundle/unite.vim
-	url = https://github.com/Shougo/unite.vim
-[submodule ".vim/bundle/indentLine"]
-	path = .vim/bundle/indentLine
-	url = https://github.com/Yggdroot/indentLine
-[submodule ".vim/bundle/accelerated-smooth-scroll"]
-	path = .vim/bundle/accelerated-smooth-scroll
-	url = https://github.com/yonchu/accelerated-smooth-scroll
 [submodule ".vim/bundle/vim-smartinput"]
 	path = .vim/bundle/vim-smartinput
 	url = https://github.com/kana/vim-smartinput
+[submodule ".emacs.d/elisp/expand-region.el"]
+	path = .emacs.d/elisp/expand-region.el
+	url = https://github.com/magnars/expand-region.el
