--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -9393,19 +9393,36 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
+	<string>~/Desktop/repository/SettingFiles</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
+	<key>NSTableView Columns KeyBingingTable</key>
+	<array>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATCG
+		</data>
+		<string>198</string>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATGG
+		</data>
+		<string>302</string>
+	</array>
+	<key>NSTableView Hidden Columns KeyBingingTable</key>
+	<array/>
+	<key>NSTableView Sort Ordering KeyBingingTable</key>
+	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>356 274 924 485 0 0 1280 778 </string>
+	<string>204 261 924 485 0 0 1280 778 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>133 612 384 129 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>17 64 625 714 0 0 1280 778 </string>
-	<key>NSWindow Frame iTerm Window 1</key>
-	<string>152 64 625 714 0 0 1280 778 </string>
+	<string>79 97 598 678 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9420,92 +9437,92 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.11764705926179886</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.11372549086809158</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.10588235408067703</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14145714044570923</real>
+				<real>0.44705882668495178</real>
 				<key>Green Component</key>
-				<real>0.10840655118227005</real>
+				<real>0.14901961386203766</real>
 				<key>Red Component</key>
-				<real>0.81926977634429932</real>
+				<real>0.97647058963775635</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38298487663269043</real>
+				<real>0.18039216101169586</real>
 				<key>Green Component</key>
-				<real>0.35665956139564514</real>
+				<real>0.88627451658248901</real>
 				<key>Red Component</key>
-				<real>0.27671992778778076</real>
+				<real>0.65098041296005249</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43850564956665039</real>
+				<real>0.45490196347236633</real>
 				<key>Green Component</key>
-				<real>0.40717673301696777</real>
+				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>0.32436618208885193</real>
+				<real>0.90196079015731812</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.78039216995239258</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.46274510025978088</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.12941177189350128</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.72908437252044678</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.33896297216415405</real>
+				<real>0.5058823823928833</real>
 				<key>Red Component</key>
-				<real>0.34798634052276611</real>
+				<real>0.68235296010971069</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.93725490570068359</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.85098040103912354</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.40000000596046448</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86405980587005615</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.95794391632080078</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.98943418264389038</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.020208755508065224</real>
+				<real>0.18039216101169586</real>
 				<key>Green Component</key>
-				<real>0.54115492105484009</real>
+				<real>0.88627451658248901</real>
 				<key>Red Component</key>
-				<real>0.44977453351020813</real>
+				<real>0.65098041296005249</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.023484811186790466</real>
+				<real>0.45490196347236633</real>
 				<key>Green Component</key>
-				<real>0.46751424670219421</real>
+				<real>0.85882353782653809</real>
 				<key>Red Component</key>
-				<real>0.64746475219726562</real>
+				<real>0.90196079015731812</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
@@ -9519,47 +9536,47 @@
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43516635894775391</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.10802463442087173</real>
+				<real>0.5058823823928833</real>
 				<key>Red Component</key>
-				<real>0.77738940715789795</real>
+				<real>0.68235296010971069</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52502274513244629</real>
+				<real>0.93725490570068359</real>
 				<key>Green Component</key>
-				<real>0.57082360982894897</real>
+				<real>0.85098040103912354</real>
 				<key>Red Component</key>
-				<real>0.14679534733295441</real>
+				<real>0.40000000596046448</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.79781103134155273</real>
+				<real>0.94901961088180542</real>
 				<key>Green Component</key>
-				<real>0.89001238346099854</real>
+				<real>0.97254902124404907</real>
 				<key>Red Component</key>
-				<real>0.91611063480377197</real>
+				<real>0.97254902124404907</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15170273184776306</real>
+				<real>0.11764705926179886</real>
 				<key>Green Component</key>
-				<real>0.11783610284328461</real>
+				<real>0.11372549086809158</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.10588235408067703</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.073530435562133789</real>
+				<real>0.44705882668495178</real>
 				<key>Green Component</key>
-				<real>0.21325300633907318</real>
+				<real>0.14901961386203766</real>
 				<key>Red Component</key>
-				<real>0.74176257848739624</real>
+				<real>0.97647058963775635</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9568,11 +9585,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15170273184776306</real>
+				<real>0.070588238537311554</real>
 				<key>Green Component</key>
-				<real>0.11783610284328461</real>
+				<real>0.070588238537311554</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.070588238537311554</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9591,11 +9608,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.93319034576416016</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.96691048145294189</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.96580147743225098</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9608,27 +9625,27 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.94117647409439087</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.97254902124404907</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.97254902124404907</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.13333334028720856</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.13333334028720856</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.13333334028720856</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
-			<string>No</string>
+			<string>Recycle</string>
 			<key>Default Bookmark</key>
 			<string>No</string>
 			<key>Disable Printing</key>
@@ -9642,11 +9659,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.94901961088180542</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.97254902124404907</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.97254902124404907</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10002,20 +10019,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.93319034576416016</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.96691048145294189</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.96580147743225098</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.26666668057441711</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.26666668057441711</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.26666668057441711</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10939,7 +10956,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>~/Desktop/repository/SettingFiles/</string>
+	<string>/Users/a13596/Desktop/repository/SettingFiles</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10957,7 +10974,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-02-10T13:32:18Z</date>
+	<date>2014-04-17T01:25:55Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
