--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 [submodule ".emacs.d/elisp/tabbar"]
 	path = .emacs.d/elisp/tabbar
 	url = https://github.com/dholm/tabbar.git
-[submodule ".vim/bundle/vundle"]
-	path = .vim/bundle/vundle
+[submodule "vimfiles/.vim/bundle/vundle"]
+	path = vimfiles/.vim/bundle/vundle
 	url = https://github.com/gmarik/vundle
 [submodule ".emacs.d/elisp/multiple-cursors"]
 	path = .emacs.d/elisp/multiple-cursors
