パスが狂っていたので修正

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule ".emacs.d/elisp/tabbar"]
 	path = .emacs.d/elisp/tabbar
 	url = https://github.com/dholm/tabbar.git
-[submodule "vimfiles/.vim/bundle/vundle"]
-	path = vimfiles/.vim/bundle/vundle
-	url = https://github.com/gmarik/vundle
+[submodule "vimfiles/.vim/bundle/Vundle.vim"]
+	path = vimfiles/.vim/bundle/Vundle.vim
+	url = https://github.com/gmarik/Vundle.vim
 [submodule ".emacs.d/elisp/multiple-cursors"]
 	path = .emacs.d/elisp/multiple-cursors
 	url = https://github.com/magnars/multiple-cursors.el.git
