--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -41,6 +41,11 @@
   smupgrade = submodule foreach 'git pull origin master'
   smupdate = submodule update --init --recursive
 
+  ; http://d.hatena.ne.jp/sugyan/20111103/1320247493
+  tr = log --graph --pretty='format:%C(yellow)%h%Creset %s %Cgreen(%an)%Creset %Cred%d%Creset'
+; http://xr0038tech.hatenadiary.jp/entry/2014/01/23/202116
+  tree = log --graph --branches --pretty=format:"%d [%h] \"%s\""
+
 ; http://motemen.hatenablog.com/entry/2013/11/26/Git_%E3%81%AE_diff_%E3%82%92%E7%BE%8E%E3%81%97%E3%81%8F%E8%A1%A8%E7%A4%BA%E3%81%99%E3%82%8B%E3%81%9F%E3%82%81%E3%81%AB%E5%BF%85%E8%A6%81%E3%81%AA%E3%81%9F%E3%81%A3%E3%81%9F_1_%E3%81%A4%E3%81%AE%E8%A8%AD
 [pager]
 	; log = diff-highlight | less
