--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,21 +9393,40 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
+	<string>~/Desktop/repository/SettingFiles</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
+	<key>NSTableView Columns KeyBingingTable</key>
+	<array>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATCG
+		</data>
+		<string>198</string>
+		<data>
+		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
+		hAErATGG
+		</data>
+		<string>302</string>
+	</array>
+	<key>NSTableView Hidden Columns KeyBingingTable</key>
+	<array/>
+	<key>NSTableView Sort Ordering KeyBingingTable</key>
+	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>11 267 924 485 0 0 1280 778 </string>
+	<string>204 261 924 485 0 0 1280 778 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>133 612 384 129 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>11 72 571 706 0 0 1280 778 </string>
+	<string>109 64 610 706 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>79 64 625 714 0 0 1280 778 </string>
+	<string>485 66 610 706 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>173 64 625 714 0 0 1280 778 </string>
+	<string>173 66 610 706 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9431,56 +9450,56 @@
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.25882354378700256</real>
 				<key>Green Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.25882354378700256</real>
 				<key>Red Component</key>
-				<real>0.76470589637756348</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.40784314274787903</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.80392158031463623</real>
 				<key>Red Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.45490196347236633</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.16078431904315948</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.72549021244049072</real>
 				<key>Red Component</key>
-				<real>0.85490196943283081</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.84313726425170898</real>
 				<key>Green Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.84313726425170898</real>
 				<key>Red Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.13725490868091583</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85490196943283081</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.21568627655506134</real>
 				<key>Red Component</key>
-				<real>0.85882353782653809</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.88235294818878174</real>
 				<key>Green Component</key>
-				<real>0.85490196943283081</real>
+				<real>0.92941176891326904</real>
 				<key>Red Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -9494,74 +9513,74 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.40784314274787903</real>
 				<key>Green Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.68627452850341797</real>
 				<key>Red Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.45490196347236633</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.16078431904315948</real>
 				<key>Green Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.67843139171600342</real>
 				<key>Red Component</key>
-				<real>0.7607843279838562</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.52549022436141968</real>
 				<key>Green Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.56078433990478516</real>
 				<key>Red Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.20000000298023224</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.90092635154724121</real>
 				<key>Green Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.077163636684417725</real>
 				<key>Red Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.58085638284683228</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.76470589637756348</real>
+				<real>0.84313726425170898</real>
 				<key>Green Component</key>
-				<real>0.7607843279838562</real>
+				<real>0.84313726425170898</real>
 				<key>Red Component</key>
-				<real>0.44705882668495178</real>
+				<real>0.13725490868091583</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.87843137979507446</real>
 				<key>Green Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.88235294818878174</real>
 				<key>Red Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.88235294818878174</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.19607843458652496</real>
+				<real>0.3333333432674408</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.25882354378700256</real>
 				<key>Green Component</key>
-				<real>0.66666668653488159</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.85882353782653809</real>
+				<real>1</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9570,11 +9589,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18431372940540314</real>
+				<real>0.26274511218070984</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.21568627655506134</real>
 				<key>Red Component</key>
-				<real>0.16078431904315948</real>
+				<real>0.17647059261798859</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9593,11 +9612,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.37237682938575745</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.4359603226184845</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.85236084461212158</real>
+				<real>0.0</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9610,20 +9629,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.18431372940540314</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.16078431904315948</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -9644,11 +9663,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.87843137979507446</real>
 				<key>Green Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.88235294818878174</real>
 				<key>Red Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.88235294818878174</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -9996,7 +10015,7 @@
 			<key>Screen</key>
 			<integer>-1</integer>
 			<key>Scrollback Lines</key>
-			<integer>1000</integer>
+			<integer>5000</integer>
 			<key>Scrollback With Status Bar</key>
 			<true/>
 			<key>Scrollback in Alternate Screen</key>
@@ -10004,20 +10023,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.0</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.25882354378700256</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.21176470816135406</real>
+				<real>0.21568627655506134</real>
 				<key>Red Component</key>
-				<real>0.027450980618596077</real>
+				<real>0.17647059261798859</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10941,7 +10960,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>~/Desktop/repository/SettingFiles/mac/</string>
+	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10959,7 +10978,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-06-12T15:29:39Z</date>
+	<date>2014-06-18T02:02:59Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
