--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -8,7 +8,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140634</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -16,7 +16,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400809041</integer>
+		<integer>1401292018</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -24,7 +24,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1390383349</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -32,7 +32,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403079188</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -40,7 +40,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1390739356</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -48,7 +48,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1397922258</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -56,7 +56,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403147575</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -64,7 +64,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140276</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -72,7 +72,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1393986630</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -80,7 +80,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140497</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -88,7 +88,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140180</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -96,7 +96,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1392128386</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -104,7 +104,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1392128449</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -112,7 +112,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140332</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -120,7 +120,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403148245</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -128,7 +128,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1392128409</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>|дﾟ)ﾁﾗｯ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1404229056</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -136,7 +144,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1397922240</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -144,7 +152,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1395423089</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -152,7 +160,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140561</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -160,7 +168,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140615</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -168,7 +176,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1392128398</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -176,7 +184,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140510</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -184,7 +192,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140525</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -192,15 +200,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140345</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>よろしくお願い申し上げます。</string>
-		<key>shortcut</key>
-		<string>よろ</string>
-		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1403280313</integer>
 	</dict>
 </array>
 </plist>
