add tmux settings.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,13 +78,13 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-t send-prefix
 
 # vでペインを縦に分割する
-bind v split-window -h
+bind v split-window -h -c "#{pane_current_path}"
 unbind C-v
-bind -n C-v split-window -h
+bind -n C-v split-window -h -c "#{pane_current_path}"
 
 # sでペインを横に分割する
-bind s split-window -v
-bind -n C-s split-window -v
+bind s split-window -v -c "#{pane_current_path}"
+bind -n C-s split-window -v -c "#{pane_current_path}"
 
 # Vimのキーバインドでペインを移動する
 # bind h select-pane -L
@@ -148,17 +148,21 @@ set -g visual-activity on
 
 # 一行コピー
 # http://mba-hack.blogspot.jp/2014/03/tmux11.html
-# bind -t vi-copy y copy-line
-# bind Y run 'tmux copy-mode\;' send-keys y\;
+bind -t vi-copy z copy-line
+bind -n C-y run 'tmux copy-mode\;' send-keys z\; display "1 line copied."
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
-setw -g mode-keys vi
+# setw -g mode-keys vi
+set-window-option -g mode-keys emacs
 # http://superuser.com/questions/397076/tmux-exits-with-exited-on-mac-os-x
 ## クリップボード共有を有効にする
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t emacs-copy v begin-selection
+bind-key -t emacs-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t emacs-copy Enter copy-selection
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
