--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -8,7 +8,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140634</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -16,7 +16,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400809041</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -24,15 +24,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(￣ー￣)ﾆﾔﾘｯ</string>
+		<string>(￣ー￣)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403079188</integer>
+		<integer>1408622686</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -40,7 +40,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -48,7 +48,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -56,15 +56,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403147575</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>((((( ；ﾟДﾟ)))))ｶﾞｸｶﾞｸﾌﾞﾙﾌﾞﾙ</string>
+		<string>((((( ；ﾟДﾟ)))))</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140276</integer>
+		<integer>1408622691</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -72,7 +72,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -80,15 +80,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140497</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(´・ω・)ｶﾜｲｿｽ</string>
+		<string>(´・ω・)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140180</integer>
+		<integer>1408622696</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -96,7 +96,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -104,7 +104,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(´･д･)-з</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1408622718</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -112,7 +120,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1404458995</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -120,15 +128,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1404458970</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(´Д｀)ﾊｧ…</string>
+		<string>(´Д｀)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140332</integer>
+		<integer>1408622708</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -136,7 +144,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403148245</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -144,7 +152,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -152,7 +160,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -160,7 +168,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -168,7 +176,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140561</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -176,7 +184,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140615</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -184,15 +192,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1400805944</integer>
+		<integer>1408622648</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>v(￣∇￣)ﾆﾔｯ</string>
+		<string>v(￣∇￣)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140510</integer>
+		<integer>1408622713</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -200,15 +208,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1403140525</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>ﾊｱｰｧ(´･д･)-з</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1403140345</integer>
+		<integer>1408622648</integer>
 	</dict>
 </array>
 </plist>
